--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -40,15 +40,7 @@
         <hr>
         <article>
           {% for post in posts %}
-            <ul>
-              <li>
-                Автор: {{ post.author.get_full_name }}
-              </li>
-              <li>
-                Дата публикации: {{ post.pub_date|date:"d E Y" }}
-              </li>
-            </ul>
-          <p>{{ post.text }}</p>
+            {% include  'includes/postcard.html'%}
             {% if post.group %}
             <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
             <!-- <a href="">все записи группы</a>-->
