--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -11,8 +11,10 @@
                 Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались
               </div>
               <div class="card-body"> 
-                <form method="post" action="../users/password_reset_form.html">
-                  <input type="hidden" name="csrfmiddlewaretoken" value="">
+                <form method="post" action="{% url 'users:password_reset_form' %}">
+                  <!-- action="../users/password_reset_form.html" -->
+                  {% csrf_token %}
+                  <!--<input type="hidden" name="csrfmiddlewaretoken" value=""> -->
                   <div class="form-group row my-3 p-3">
                     <label for="id_email">
                       Адрес электронной почты
