--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8"> <!-- Кодировка сайта -->
     <!-- Сайт готов работать с мобильными устройствами -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
+       <!-- Загружаем фав-иконки -->
     <link rel="icon" href="% static img/fav/fav.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
+    <!--<link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">-->
     <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#000">
