--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -2,30 +2,17 @@
 {% load static %}
 <!DOCTYPE html> <!-- Используется html 5 версии -->
 <html lang="ru"> <!-- Язык сайта - русский -->
-  <head>    
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-       <!-- Загружаем фав-иконки -->
-    <link rel="icon" href="% static img/fav/fav.ico" type="image">
-    <!--<link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">-->
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    
-  </head>       
+
   <body>       
     <header>
-      {% block title %}
+      <!--{% block title %}
         Потерялся заголовок
-      {% endblock %}
-
+      {% endblock %}-->
+      
       {% include 'includes/header.html' %}
     </header>
     <main>
+      <!--{% block header %} Потерялся заголовок{% endblock %}-->
       {% block content %}
         Контент не подвезли :(
       {% endblock %}
@@ -34,4 +21,5 @@
       {% include 'includes/footer.html' %} 
     </footer>
   </body>
+  
 </html> 
