--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,45 +1,16 @@
 <!-- templates/posts/index.html -->
 {% extends 'base.html' %} 
 {% load static %}
-<!DOCTYPE html> <!-- Используется html 5 версии -->
-<html lang="ru"> <!-- Язык сайта - русский -->
-  <head>    
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
-    <link rel="icon" href="img/fav/fav.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    {% block title %} <title> {{ title }} </title> {% endblock %} 
-  </head>
-  <body>
-    <header>
-      <!-- Использованы классы бустрапа для создания типовой навигации с логотипом -->
-      <!-- В дальнейшем тут будет создано полноценное меню -->
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <a class="navbar-brand" href="{% url 'posts:index'%}">
-            <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-            <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
-            <span style="color:red">Ya</span>tube
-          </a>
-        </div>
-      </nav>    
-    </header>
-    <main> 
-      {% block content %}
+
+{% block title %}  Последние обновления на сайте{% endblock %}
+
+{% block content %}
       <!-- класс py-5 создает отступы сверху и снизу блока -->
-      <div class="container py-5">     
+      <div class="container py-5">
         <h1> Последние обновления на сайте </h1>
-        <hr>
+        <hr>   
         <article>
-          {% for post in posts %}
+          {% for post in page_obj %}
             {% include  'includes/postcard.html'%}
             {% if post.group %}
             <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
@@ -49,8 +20,6 @@
           {% endfor %} 
         </article>
         <!-- под последним постом нет линии -->
+        {% include 'posts/includes/paginator.html' %}
       </div>
-      {% endblock %}
-    </main>
-  </body>
-</html>
+{% endblock %}
