--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -2,17 +2,16 @@
 {% load static %}
 <!DOCTYPE html> <!-- Используется html 5 версии -->
 <html lang="ru"> <!-- Язык сайта - русский -->
-
+  <head>
+    <title>
+      {% block title %} Потерялся заголовок {% endblock %}
+    </title>
+  </head>
   <body>       
-    <header>
-      <!--{% block title %}
-        Потерялся заголовок
-      {% endblock %}-->
-      
+    <header>      
       {% include 'includes/header.html' %}
     </header>
     <main>
-      <!--{% block header %} Потерялся заголовок{% endblock %}-->
       {% block content %}
         Контент не подвезли :(
       {% endblock %}
@@ -21,5 +20,4 @@
       {% include 'includes/footer.html' %} 
     </footer>
   </body>
-  
 </html> 
