--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -25,7 +25,7 @@
               {% if post.group %}
                 <p> <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a></p>
               {% endif %}
-            <a href="<!-- -->">подробная информация </a>
+            <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>
             {% if not forloop.last %}<hr>{% endif %}
           {% endfor %} 
         </article>
