--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -70,7 +70,10 @@
            href="{% url 'users:logout' %}">Выйти</a>
         </li>
         <li>
-          Пользователь: {{ user.username }}
+          <!-- Пользователь: {{ user.username }} -->
+          <li class="nav-item"> 
+            <a class="nav-link" href="{% url 'posts:profile' user.username %}"> Пользователь: {{ user.username }} </a>
+          </li>
         </li>
         {% else %}
         <li class="nav-item"> 
