--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -13,7 +13,7 @@
                 <li class="list-group-item">
                   Группа:  {{ group.title }}
                   <a href="{% url 'posts:group_list' post.group.slug %}">
-                    все записи группы
+                    Все записи группы
                   </a>
               {% endif %}
             </li>
@@ -25,7 +25,12 @@
             </li>
             <li class="list-group-item">
               <a href="{% url 'posts:profile' author %}">
-                все посты пользователя
+                Все посты пользователя
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="{% url 'posts:post_edit' post.id %}">
+                Редактировать запись
               </a>
             </li>
           </ul>
